--- a/src/content/work/new-museum.mdx
+++ b/src/content/work/new-museum.mdx
@@ -7,26 +7,14 @@ pubDate: "Jun 01 2024"
 heroImage: "/blog-placeholder-5.jpg"
 ---
 
-import TwoColumn from "@/components/TwoColumn.astro";
-
-<TwoColumn>
 <div slot="left">
-- This is in the left column.
-- So is this.
+  [![blog
+  placeholder](/blog-placeholder-about.jpg)](/blog-placeholder-about.jpg)
 </div>
 
 <div slot="right">
-- This is in the right column.
-- And this too.
+  # Yalan is a creative studio based in New York City. We specialize in
+  branding, web design, and art direction. We work with a variety of clients,
+  from small startups to large corporations. Our goal is to create beautiful,
+  functional designs that help our clients succeed.
 </div>
-</TwoColumn>
-
-<TwoColumn>
-<div slot="left">
-[![blog placeholder](/blog-placeholder-about.jpg)](/blog-placeholder-about.jpg)
-</div>
-
-<div slot="right">
-# Yalan is a creative studio based in New York City. We specialize in branding, web design, and art direction. We work with a variety of clients, from small startups to large corporations. Our goal is to create beautiful, functional designs that help our clients succeed.
-</div>
-</TwoColumn>
