--- a/src/content/work/goca.mdx
+++ b/src/content/work/goca.mdx
@@ -4,6 +4,8 @@ description: |
   Designed and developed a custom generative patterns system and website for GOCA, a Gallery of Contemporary Art in Chelsea, Manhattan that highlights emerging Asian artists. In collaboration with the team at [Athletics](https://athleticsnyc.com), the brand and website offer a dynamic introduction to these new voices, while creating a vibrant platform for the gallery to showcase fresh art, spark conversations, and host innovative ideas.
 
   Breaking away from the typical art gallery website, GOCA's web experience brings the focus on art and artists to life. With vibrant animations at its core, the site feels alive and constantly evolving. The shapes drawn from the logomark animate with purpose, forming shifting patterns over time. Features like current exhibits, artist stories, and highlighted pieces come together to tell the gallery’s story with clarity and vivid detail.
+buttons:
+  - ["Visit the Site", "https://www.goca.gallery/"]
 credit: |
 
   ### Collaborators
@@ -31,9 +33,9 @@ recognition:
   - "[The Brand Identity](https://the-brandidentity.com/project/athletics-modular-cross-cultural-identity-for-goca-is-about-putting-artists-in-the-spotlight)"
 tags:
   - "Brand Identity"
-  - "Website"
+  - "Web Design"
   - "Generative Design"
-startDate: "Jan 2024"
+startDate: "Jan 2025"
 heroImage: "/goca/GOCA Athletics (1).mp4"
 images: ["/goca/img2.jpg", "/goca/video.mp4", "/goca/video2.mp4"]
 ---
