--- a/src/content/work/new-museum.mdx
+++ b/src/content/work/new-museum.mdx
@@ -6,6 +6,8 @@ description: |
   The site serves as a critical touchpoint for The New Museum, and beyond refining core functions like ticket purchases and event calendars, the team worked to enhance its capacity to provide context for a wide range of audiences.
 
   For example, the new exhibition page not only showcases details about each specific show, but also surfaces supplemental resources, upcoming related events, and similar works from the museum’s digital archive. This approach aims to make contemporary art more accessible and engaging, whether users are physically visiting the museum or exploring from anywhere in the world.
+buttons:
+  - ["Visit the Site", "https://newmuseum.org/"]
 credit: |
 
   ### Design
@@ -33,8 +35,8 @@ recognition:
   - "[Creative Review](https://www.creativereview.co.uk/athletics-new-museum-branding-design/)"
   - "[Brand New](https://www.underconsideration.com/brandnew/archives/new_identity_for_new_museum_by_athletics.php)"
 tags:
-  - "Website"
-  - "Code"
+  - "Web Design"
+  - "Web Development"
 startDate: "Jan 2023"
 endDate: "Dec 2024"
 heroImage: "/new-museum/video3.mp4"
