--- a/src/content/work/xr.mdx
+++ b/src/content/work/xr.mdx
@@ -1,11 +1,9 @@
 ---
 title: "XR"
 description: |
-  Collaborated with a group of designers and developers on designing and developing the new website for New Museum. I mainly contribute to the design and development of the membership and ticketing systems, while ensuring accessibility guidelines were met throughout the website.
+  XR’s brand identity is built around purposeful momentum and performance, combining modernist aesthetics with influences from fashion, skincare, and film culture. In collaboration with the design team, I developed a custom generative tool to bring this vision to life, allowing the XR team to easily create dynamic text gradients in motion. The system uses letterforms and language itself as design objects, creating patterns that reflect the brand’s forward-moving, intelligent nature. The tool generates these patterns in line with the carefully crafted visual language, which includes a softened, middle-weight “X” mark that breathes and shifts as it animates.
 
-  The site serves as a critical touchpoint for The New Museum, and beyond refining core functions like ticket purchases and event calendars, the team worked to enhance its capacity to provide context for a wide range of audiences.
-
-  For example, the new exhibition page not only showcases details about each specific show, but also surfaces supplemental resources, upcoming related events, and similar works from the museum’s digital archive. This approach aims to make contemporary art more accessible and engaging, whether users are physically visiting the museum or exploring from anywhere in the world.
+  The generative design system we created leverages these foundational elements, such as the subtle weight shifts in the logo and the use of modern typography, to produce motion-based patterns that emphasize XR’s strategic direction. By focusing on scalability and flexibility, the tool ensures that XR’s identity can evolve with minimal input, while maintaining consistency across applications.
 credit: |
 
   ### Completed at
@@ -20,39 +18,37 @@ recognition:
 tags:
   - "Brand Identity"
   - "Generative Design"
+  - "Tool"
 startDate: "2024"
-heroImage: "/new-museum/video3.mp4"
-images:
-  [
-    "/new-museum/New Museum Athletics.mp4",
-    "/new-museum/video.mp4",
-    "/new-museum/video3.mp4",
-  ]
+heroImage: "/xr/XR Athletics (2).mp4"
+images: ["/xr/XR Athletics (2).mp4"]
 ---
 
 import Media from "@/components/utils/Media.astro";
 
-<Media src="/new-museum/New Museum Athletics.mp4" isVideo={true} />
+<Media src="/xr/XR Athletics.mp4" isVideo={true} />
 
 <div>
-  <Media src="/new-museum/video.mp4" isVideo={true} />
+  <Media src="/xr/XR Athletics (7).mp4" isVideo={true} />
 </div>
 
 <div>
-  <Media src="/new-museum/video2.mp4" isVideo={true} />
-  The website uses a lot of different vibrant color combinations, and houses
-  many images so it was important to ensure that the site is accessible to all
-  users. The site was built using a modular design system, which allows for easy
-  updates and changes in the future.
+  <Media src="/xr/XR Athletics (5).mp4" isVideo={true} />
 </div>
 
-<Media src="/new-museum/New Museum Athletics (2).mp4" isVideo={true} />
-<Media src="/new-museum/New Museum Athletics (1).mp4" isVideo={true} />
+<Media src="/xr/XR Athletics (6).mp4" isVideo={true} />
+<Media src="/xr/XR Athletics (3).mp4" isVideo={true} />
+<Media src="/xr/XR Athletics (1).mp4" isVideo={true} />
 
-<Media src="/new-museum/NMcase Site Interactions Footer.mp4" isVideo={true} />
-<Media
-  src="/new-museum/NMcase Site Interactions Slideshow.mp4"
-  isVideo={true}
-/>
-
-![](/new-museum/ticket.jpg)
+<div>
+  <Media src="/xr/tool.mp4" isVideo={true} />
+  The custom tool allows the XR team to quickly adjust text, text size and grid
+  size to export brand-safe generative assets.
+</div>
+<div>
+  <Media src="/xr/XR Case Study Type Pattern 2.mp4" isVideo={true} />
+</div>
+<Media src="/xr/XR Case Study Type Pattern 3.mp4" isVideo={true} />
+<Media src="/xr/XR Case Study Type Pattern.mp4" isVideo={true} />
+<Media src="/xr/XR Case Study Swag Tote.jpg" isVideo={false} />
+<Media src="/xr/XR_Case-Study_Swag_Coasters.jpg" isVideo={false} />
