--- a/src/content/work/duty-free.mdx
+++ b/src/content/work/duty-free.mdx
@@ -7,51 +7,49 @@ description: |
 credit: |
 
   ### Collaborators
-  Nikki Makagiansar
+  [Nikki Makagiansar](https://niktari.com)
 
-  Tee Topor
+  [Tee Topor](https://bozo.services/)
 
-  Hong Hua
+  [Hong Hua](https://studiohuahong.com/)
 
 recognition:
   - "Showcased at 2024 DEMO Festival"
 
 tags:
   - "Installation"
-  - "Generative Design"
-  - "Web Development"
 startDate: "June 2024"
-heroImage: "/iots/image_of_the_studio_walkthrough.mp4"
-images: ["/iots/1.mp4", "/iots/2.mp4"]
+heroImage: "/duty-free/scan copy.mp4"
+images: ["/duty-free/scan copy.mp4", "/duty-free/whole.jpg"]
 ---
 
 import Media from "@/components/utils/Media.astro";
 
 <div>
-  <Media src="/iots/image_of_the_studio_walkthrough copy.mp4" isVideo={true} />
-  There’s also a consolidated data viz that archives all of the data points.
+  <Media src="/duty-free/home-page copy.mp4" isVideo={true} />
+  Toblerones as a staple at duty free stores. Parameterized to reflect number of
+  hours user is requesting.
 </div>
 
 <div>
-  <Media src="/iots/Page.jpg" isVideo={false} />
-  The project was made in response to the pandemic and the freelancing shift in
-  the current design landscape.
+  <Media src="/duty-free/whole.jpg" isVideo={false} />
+  The production photo from the installation.
 </div>
 
 <div>
-  <Media src="/iots/replay2.mp4" isVideo={true} />
+  <Media src="/duty-free/footage copy.mp4" isVideo={true} />
 </div>
-<Media src="/iots/image_of_the_studio_walkthrough_1 copy.mp4" isVideo={true} />
+<Media src="/duty-free/hour copy.mp4" isVideo={true} />
+<Media src="/duty-free/option.mp4" isVideo={true} />
 <div>
-  <Media src="/iots/gravity.mp4" isVideo={true} />
-  Participants' answers influence the cubes’ amount, color, size, and gravity —
-  for example, here preferring in-person work increases gravitational pull.
+  <Media src="/duty-free/table.jpg" isVideo={false} />
+  Store is called “Duty Free” — Fitting name considering duty free stores are
+  where normal economic rules are suspended.
 </div>
-<Media src="/iots/visualizer.mp4" isVideo={true} />
-<Media src="/iots/result.png" isVideo={false} />
+
+<Media src="/duty-free/receipt.jpg" isVideo={false} />
 
 <div>
-  <Media src="/iots/render.mp4" isVideo={true} />
-  At the end of the survey, a personalized data visualization is generated in
-  the browser, ready to download and share.
+  <Media src="/duty-free/offering.mp4" isVideo={true} />
+  At checkout flow, transacting time instead of money,
 </div>
