--- a/src/content/work/goca.mdx
+++ b/src/content/work/goca.mdx
@@ -33,7 +33,7 @@ recognition:
   - "[The Brand Identity](https://the-brandidentity.com/project/athletics-modular-cross-cultural-identity-for-goca-is-about-putting-artists-in-the-spotlight)"
 tags:
   - "Brand Identity"
-  - "Web Design"
+  - "Website"
   - "Generative Design"
 startDate: "Jan 2025"
 heroImage: "/goca/GOCA Athletics (1).mp4"
