--- a/src/content/work/iots.mdx
+++ b/src/content/work/iots.mdx
@@ -28,7 +28,7 @@ recognition:
 tags:
   - "Data Visualization"
   - "Generative Design"
-  - "Web Development"
+  - "Website"
 startDate: "2023"
 heroImage: "/iots/image_of_the_studio_walkthrough.mp4"
 images: ["/iots/1.mp4", "/iots/2.mp4"]
