--- a/src/content/work/new-museum.mdx
+++ b/src/content/work/new-museum.mdx
@@ -35,8 +35,7 @@ recognition:
   - "[Creative Review](https://www.creativereview.co.uk/athletics-new-museum-branding-design/)"
   - "[Brand New](https://www.underconsideration.com/brandnew/archives/new_identity_for_new_museum_by_athletics.php)"
 tags:
-  - "Web Design"
-  - "Web Development"
+  - "Website"
 startDate: "Jan 2023"
 endDate: "Dec 2024"
 heroImage: "/new-museum/video3.mp4"
