--- a/src/content/work/guansi.mdx
+++ b/src/content/work/guansi.mdx
@@ -20,19 +20,20 @@ recognition:
 tags:
   - "Installation"
 startDate: "Sep 2024"
-heroImage: "/guansi/guansi.png"
+heroImage: "/guansi/exhibition1.jpg"
 images: ["/guansi/map.png", "/guansi/cover.jpg"]
 ---
 
 import Media from "@/components/utils/Media.astro";
 
 <div>
-  <Media src="/guansi/exhibition1.jpg" isVideo={false} />
+  <Media src="/guansi/guansi.png" isVideo={false} />
 </div>
 
 <div>
   <Media src="/guansi/website.mp4" isVideo={true} />
-    People can go to the website to read other people's stories of migration and coming home.
+  People can go to the website to read other people's stories of migration and
+  coming home.
 </div>
 
 <div>
@@ -42,12 +43,14 @@ import Media from "@/components/utils/Media.astro";
 
 <div>
   <Media src="/guansi/research.jpg" isVideo={false} />
-  4066.62 marks the geographical distance between soldier Lai Xingyang and his hometown of Guanxi when he was sent to the labor camp in Siberia.
+  4066.62 marks the geographical distance between soldier Lai Xingyang and his
+  hometown of Guanxi when he was sent to the labor camp in Siberia.
 </div>
 
 <div>
   <Media src="/guansi/code.mp4" isVideo={true} />
-  We developed a generative system using code to create a unique house for each data point.
+  We developed a generative system using code to create a unique house for each
+  data point.
 </div>
 
 <div>
