--- a/src/content/work/duty-free.mdx
+++ b/src/content/work/duty-free.mdx
@@ -21,6 +21,7 @@ tags:
 startDate: "June 2024"
 heroImage: "/duty-free/scan copy.mp4"
 images: ["/duty-free/scan copy.mp4", "/duty-free/whole.jpg"]
+archived: false
 ---
 
 import Media from "@/components/utils/Media.astro";
