--- a/src/content/work/goca.mdx
+++ b/src/content/work/goca.mdx
@@ -38,6 +38,7 @@ tags:
 startDate: "Jan 2025"
 heroImage: "/goca/GOCA Athletics (1).mp4"
 images: ["/goca/img2.jpg", "/goca/video.mp4", "/goca/video2.mp4"]
+archived: false
 ---
 
 import Media from "@/components/utils/Media.astro";
