--- a/src/content/work/guansi.mdx
+++ b/src/content/work/guansi.mdx
@@ -17,10 +17,12 @@ credit: |
 recognition:
   - "Archived at Taiwanese Hakka Affairs Council "
 
+archived: false
+
 tags:
   - "Installation"
 startDate: "Sep 2024"
-heroImage: "/guansi/exhibition1.jpg"
+heroImage: "/guansi/scene.mp4"
 images: ["/guansi/map.png", "/guansi/cover.jpg"]
 ---
 
@@ -37,7 +39,7 @@ import Media from "@/components/utils/Media.astro";
 </div>
 
 <div>
-  <Media src="/guansi/scene.mp4" isVideo={true} />
+  <Media src="/guansi/exhibition1.jpg" isVideo={false} />
 
 </div>
 
