--- a/src/content/work/iots.mdx
+++ b/src/content/work/iots.mdx
@@ -30,8 +30,10 @@ tags:
   - "Generative Design"
   - "Website"
 startDate: "2023"
+endDate: "2024"
 heroImage: "/iots/image_of_the_studio_walkthrough.mp4"
 images: ["/iots/1.mp4", "/iots/2.mp4"]
+archived: false
 ---
 
 import Media from "@/components/utils/Media.astro";
