--- a/src/content/work/new-museum.mdx
+++ b/src/content/work/new-museum.mdx
@@ -45,6 +45,7 @@ images:
     "/new-museum/video.mp4",
     "/new-museum/video3.mp4",
   ]
+archived: false
 ---
 
 import Media from "@/components/utils/Media.astro";
