--- a/src/content/work/xr.mdx
+++ b/src/content/work/xr.mdx
@@ -22,6 +22,7 @@ tags:
 startDate: "2024"
 heroImage: "/xr/XR Athletics (2).mp4"
 images: ["/xr/XR Athletics (2).mp4"]
+archived: false
 ---
 
 import Media from "@/components/utils/Media.astro";
