--- a/src/content/work/ci2.mdx
+++ b/src/content/work/ci2.mdx
@@ -3,7 +3,7 @@ title: "The Web is Fluid, Generative and Live"
 excerpt: |
   This class site serves as a hub for the materials and resources I curated for the class at Parsons Communication Design.
 
-button:
+buttons:
   - ["Visit the Site", "https://ci2-munus.munusandniktari.com/"]
 
 recognition:
