--- a/src/content/work/pcd.mdx
+++ b/src/content/work/pcd.mdx
@@ -3,9 +3,9 @@ title: "Processing Community Day Taiwan 2023"
 excerpt: |
   Co-organized with my Taiwanese collective SpOnAcT!, PCD Taiwan 2023 titled "Code As Acts" is an exploration of how creative programming can engage with society and intersect with various disciplines. The event also highlights past and ongoing efforts by both local and international communities in this field.
 
-button:
+buttons:
   - [
-      "Visit the Site",
+      "Watch the Livestreams",
       "https://www.youtube.com/playlist?list=PLaQjHexP0AoYBnqQLZhqW9q-l-lFe2Sy7",
     ]
 
