Update NextProject logic and goca project assets
Refined NextProject.astro to only show non-archived projects and handle navigation for archived items. Replaced an image in goca.mdx and added goca-logo.jpg. Removed apple-postcard.mdx from work content.

--- a/src/content/work/goca.mdx
+++ b/src/content/work/goca.mdx
@@ -51,7 +51,7 @@ import Media from "@/components/utils/Media.astro";
 
 ![](/goca/goca-storefront.jpg)
 
-<div>![](/goca/goca-space.jpg)</div>
+<div>![](/goca/goca-logo.jpg)</div>
 
 <div>
   <Media src="/goca/GOCA Athletics (2).mp4" isVideo={true} />
